--- a/src/cores/smsplus/CMakeLists.txt
+++ b/src/cores/smsplus/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 # set source files
 file(GLOB SMS_SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/../main.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/*.c*
         ${CMAKE_CURRENT_SOURCE_DIR}/smsplus/*.c
         )
