--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ option(PLATFORM_LINUX "Linux target platform" OFF)
 
 # microboy default board
 if (NOT PLATFORM_LINUX AND NOT PICO_BOARD)
-    #set(PICO_BOARD "adafruit_feather_rp2040") # v1.0 rev board
-    set(PICO_BOARD "pico") # v1.1 rev board
+    set(PICO_BOARD "adafruit_feather_rp2040") # v1.0 rev board
+    #set(PICO_BOARD "pico") # v1.1 rev board
 endif ()
 
 # pico options
