--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,28 +1,30 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.5)
 #set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 project(microboy-ui)
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 # set source files
-file(GLOB UI_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/*.c*
-        ${CMAKE_CURRENT_SOURCE_DIR}/widgets/*.c*
-        )
-set(UI_INCLUDES
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/widgets
-        )
+file(GLOB UI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c*)
+set(UI_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
+set(UI_RESOURCES
+        romfs/gameboy_gray.bmp
+        romfs/nes_gray.bmp
+        romfs/settings_gray.bmp
+        romfs/sms_gray.bmp)
 set(UI_FLAGS -DMB_UI)
 
 ####################
 # skeleton library
 ####################
+#add_executable(microboy-ui ${UI_SOURCES} ${RES})
 add_executable(microboy-ui ${UI_SOURCES})
+target_add_resources(microboy-ui ${UI_RESOURCES})
 target_include_directories(microboy-ui PUBLIC ${UI_INCLUDES})
 target_compile_definitions(microboy-ui PUBLIC ${UI_FLAGS})
-target_link_libraries(microboy-ui ${UI_LIBS} microboy-skeleton)
+target_link_libraries(microboy-ui ${UI_LIBS} pico2d-skeleton)
+
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-ui memmap_ui.ld)
