--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/misc/no-OS-FatFS-SD-SPI-RPi-Pico"]
 	path = external/misc/no-OS-FatFS-SD-SPI-RPi-Pico
 	url = https://github.com/Cpasjuste/no-OS-FatFS-SD-SPI-RPi-Pico.git
+[submodule "external/misc/libpico2d"]
+	path = external/misc/libpico2d
+	url = git@github.com:Cpasjuste/libpico2d.git
