--- a/src/cores/InfoNES/CMakeLists.txt
+++ b/src/cores/InfoNES/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.13)
 #set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 project(microboy-nes)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
 
 # TODO: why ?
 set(CMAKE_FLAGS_RELEASE_FIX "-fno-move-loop-invariants -fno-devirtualize -fno-devirtualize-speculatively")
@@ -25,7 +23,7 @@ set(NES_INCLUDES
 set(NES_FLAGS -DMB_NES
         -DPICO_AUDIO_I2S_MONO_INPUT
         -DPICO_AUDIO_I2S_MONO_OUTPUT
-        #-DPICO_AUDIO_I2S_BUFFER_SAMPLE_LENGTH=735
+        -DPICO_AUDIO_I2S_BUFFER_SAMPLE_LENGTH=735
 )
 
 ####################
