--- a/src/cores/Peanut-GB/CMakeLists.txt
+++ b/src/cores/Peanut-GB/CMakeLists.txt
@@ -2,17 +2,16 @@ cmake_minimum_required(VERSION 3.13)
 #set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 project(microboy-gb)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
 
 # set source files
 file(GLOB GB_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/../main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/../*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/*.c*
         ${CMAKE_SOURCE_DIR}/external/cores/Peanut-GB/examples/sdl2/minigb_apu/*.c*
         )
 set(GB_INCLUDES
         ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/..
         ${CMAKE_SOURCE_DIR}/external/cores/Peanut-GB
         ${CMAKE_SOURCE_DIR}/external/cores/Peanut-GB/examples/sdl2/minigb_apu
         )
@@ -24,7 +23,7 @@ set(GB_FLAGS -DMB_GB)
 add_executable(microboy-gb ${GB_SOURCES})
 target_include_directories(microboy-gb PUBLIC ${GB_INCLUDES})
 target_compile_definitions(microboy-gb PUBLIC ${GB_FLAGS})
-target_link_libraries(microboy-gb ${GB_LIBS} microboy-skeleton)
+target_link_libraries(microboy-gb ${GB_LIBS} pico2d-skeleton)
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-gb memmap_gb.ld)
