--- a/src/cores/smsplus/CMakeLists.txt
+++ b/src/cores/smsplus/CMakeLists.txt
@@ -2,17 +2,16 @@ cmake_minimum_required(VERSION 3.13)
 #set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 project(microboy-sms)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
 
 # set source files
 file(GLOB SMS_SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/../main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/../*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/*.c*
         ${CMAKE_CURRENT_SOURCE_DIR}/smsplus/*.c
         )
 set(SMS_INCLUDES
         ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/..
         ${CMAKE_CURRENT_SOURCE_DIR}/smsplus
         )
 set(SMS_FLAGS -DMB_SMS -DLSB_FIRST=0)
@@ -23,7 +22,7 @@ set(SMS_FLAGS -DMB_SMS -DLSB_FIRST=0)
 add_executable(microboy-sms ${SMS_SOURCES})
 target_include_directories(microboy-sms PUBLIC ${SMS_INCLUDES})
 target_compile_definitions(microboy-sms PUBLIC ${SMS_FLAGS})
-target_link_libraries(microboy-sms ${SMS_LIBS} microboy-skeleton)
+target_link_libraries(microboy-sms ${SMS_LIBS} pico2d-skeleton)
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-sms memmap_sms.ld)
