sms: fix fms linux: fix for latest changes (argb444) audio: bump max volume to 50%

--- a/src/cores/smsplus/CMakeLists.txt
+++ b/src/cores/smsplus/CMakeLists.txt
@@ -8,13 +8,15 @@ file(GLOB SMS_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/../*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/*.c*
         ${CMAKE_CURRENT_SOURCE_DIR}/smsplus/*.c
-        )
+)
 set(SMS_INCLUDES
         ${CMAKE_CURRENT_SOURCE_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/..
         ${CMAKE_CURRENT_SOURCE_DIR}/smsplus
-        )
-set(SMS_FLAGS -DMB_SMS -DLSB_FIRST=0)
+)
+set(SMS_FLAGS -DMB_SMS -DLSB_FIRST=0
+        -DPICO_AUDIO_I2S_BUFFER_SAMPLE_LENGTH=367
+)
 
 ####################
 # smsplus binary
@@ -23,6 +25,13 @@ add_executable(microboy-sms ${SMS_SOURCES})
 target_include_directories(microboy-sms PUBLIC ${SMS_INCLUDES})
 target_compile_definitions(microboy-sms PUBLIC ${SMS_FLAGS})
 target_link_libraries(microboy-sms ${SMS_LIBS} pico2d-skeleton)
+
+# test rom
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    file(GLOB ROMFS romfs/*)
+    target_add_resources(microboy-sms ${ROMFS})
+endif ()
+
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-sms memmap_sms.ld)
