io: remove "microboy" specific code from libpico2d (wip)

--- a/src/cores/Peanut-GB/CMakeLists.txt
+++ b/src/cores/Peanut-GB/CMakeLists.txt
@@ -36,6 +36,8 @@ if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-gb memmap_gb.ld)
         target_compile_definitions(microboy-gb PUBLIC ${GB_FLAGS} PICO_USE_BOOTLOADER)
+    else ()
+        set_linker_flash_size_16(microboy-gb)
     endif ()
     #pico_set_binary_type(microboy-gb copy_to_ram)
     pico_add_uf2_output(microboy-gb)
