--- a/src/cores/smsplus/CMakeLists.txt
+++ b/src/cores/smsplus/CMakeLists.txt
@@ -36,6 +36,8 @@ if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
         set_linker_script(microboy-sms memmap_sms.ld)
         target_compile_definitions(microboy-sms PUBLIC ${SMS_FLAGS} PICO_USE_BOOTLOADER)
+    else ()
+        set_linker_flash_size_16(microboy-sms)
     endif ()
     pico_add_uf2_output(microboy-sms)
     # debug output
